2012-05-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Allow result of GET_VALUE_AT_ADDRESS in A for z80-related ports.

2012-05-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve storing of literals to stack for Rabbits.

2012-05-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix multibyte global to global assignment on gbz80 with de alive.

2012-05-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc2.cc (operand_sane): fixed erroneous rejection of
	  single byte operand register assignment due to out of bounds
	  dereference

2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix for surviving pair in bitfield write.

2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/hc08/gen.c:
	  Added assertions to debug rematerialization issues.

2012-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (moveSendToCall, packRegisters): move SEND iCodes
	  to immediately precede their CALL/PCALL for better live range info.
	* src/hc08/gen.c (genSend): fixed bug swapping SEND iCode order.

2012-05-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3530276.

2012-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c (bitVectSetBit, bitVectUnSetBit),
	* src/hc08/ralloc2.cc (set_surviving_regs),
	* src/z80/ralloc2.cc (set_surviving_regs): Prohibit negative bit
	  position in bit vectors to avoid memory corruption
	* device/lib/clean.mk: add s08 and r3ka ports to cleaning

2012-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use Rabbit's cast to bool instruction for zeroing h,
	  more efficient loading of pairs in shifts.
	* src/z80/peep.c:
	  Handle bool in instruction size calculations.
