@@ -295,8 +295,9 @@ int cl_r2k::inst_mul(t_mem code) {
 }
 
 int cl_r2k::inst_rl_de(t_mem code) {
+  unsigned int oldcarry = (regs.F & BIT_C);
   regs.F = (regs.F & ~BIT_C) | (((regs.DE >> 15) & 1U) << BITPOS_C);
-  regs.DE = (regs.DE << 1) | ((regs.F & BIT_C) >> BITPOS_C);
+  regs.DE = (regs.DE << 1) | (oldcarry >> BITPOS_C);
   
   if (regs.DE & 0x8000)
     regs.F |= BIT_S;
@@ -308,8 +309,9 @@ int cl_r2k::inst_rl_de(t_mem code) {
 }
 
 int cl_r2k::inst_rr_de(t_mem code) {
+  unsigned int oldcarry = (regs.F & BIT_C);
   regs.F = (regs.F & ~BIT_C) | ((regs.DE & 1) << BITPOS_C);
-  regs.DE = (regs.DE >> 1) | ((regs.F & BIT_C) << (15 - BITPOS_C));
+  regs.DE = (regs.DE >> 1) | (oldcarry << (15 - BITPOS_C));
   
   if (regs.DE & 0x8000)
     regs.F |= BIT_S;
@@ -322,8 +324,9 @@ int cl_r2k::inst_rr_de(t_mem code) {
 
 int cl_r2k::inst_rr_hl(t_mem code)    // RR HL
 {
+  unsigned int oldcarry = (regs.F & BIT_C);
   regs.F = (regs.F & ~BIT_C) | ((regs.HL & 1) << BITPOS_C);
-  regs.HL = (regs.HL >> 1) | ((regs.F & BIT_C) << (15 - BITPOS_C));
+  regs.HL = (regs.HL >> 1) | (oldcarry << (15 - BITPOS_C));
   
   if (regs.HL & 0x8000)
     regs.F |= BIT_S;
